feat: complete project modernization
- Enhanced TypeScript configuration and ESLint rules
- Added advanced color palette generation with 8 color schemes
- Implemented comprehensive UI component system
- Added export/import JSON functionality
- Improved accessibility with ARIA attributes
- Optimized build configuration for production
- Enhanced performance with React best practices
- Added material properties controls (reflectiveness, opacity)
- Implemented professional design system

--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!doctype html>
-<html lang="en">
+<html lang="it">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>colorful</title>
+    <meta name="description" content="Colorful Palette - Genera palette di colori perfette per i tuoi progetti con schemi avanzati e proprietà materiali" />
+    <meta name="keywords" content="palette colori, generatore colori, design, sviluppo web, color schemes" />
+    <meta name="author" content="Colorful Palette Generator" />
+    <meta name="theme-color" content="#4F46E5" />
+    <title>Colorful Palette - Generatore di Palette di Colori</title>
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://colorful-palette.vercel.app/" />
+    <meta property="og:title" content="Colorful Palette - Generatore di Palette di Colori" />
+    <meta property="og:description" content="Genera palette di colori perfette per i tuoi progetti con schemi avanzati e proprietà materiali" />
+    <meta property="og:image" content="/og-image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://colorful-palette.vercel.app/" />
+    <meta property="twitter:title" content="Colorful Palette - Generatore di Palette di Colori" />
+    <meta property="twitter:description" content="Genera palette di colori perfette per i tuoi progetti con schemi avanzati e proprietà materiali" />
+    <meta property="twitter:image" content="/og-image.png" />
   </head>
   <body>
     <div id="root"></div>
